# llm_chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: bot_llm.py  main.py
src/utils/: output_schemas.py
