[project]
name = "flywheel-central-intelligence"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxwell Thorpe"}
]
readme = "README.md"
python = ">=3.9"
dependencies = [
    "langchain (>=0.3.15,<0.4.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "torch (>=2.5.1,<3.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "textstat (>=0.7.5,<0.8.0)",
]

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
